# parsea

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
src/: __init__.py  app.py  client.py
src/api/: auth.py  routes.py
src/llm/: __init__.py  base.py  factory.py
src/llm/providers/: anthropic.py  gemini.py  huggingface.py
src/models/: __init__.py  parser.py  schema.py
src/processing/: __init__.py  chunker.py  extractor.py  parser.py  retriever.py  standardize.py
src/utils/: logger.py
tests/: client.py  test_deployment.py  test_standardizer.py
